--- a/demoblaze/test-output/old/Default suite/methods-alphabetical.html
+++ b/demoblaze/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9dace">  <td>20/10/06 17:58:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@3fd7a715]">addtoCart</td> 
-  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="b9c4b8">  <td>20/10/06 17:59:05</td>   <td>13864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@3fd7a715]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="b9c4b8">  <td>20/10/06 17:58:41</td>   <td>-10895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@3fd7a715]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
+<tr bgcolor="ac9a89">  <td>20/10/07 10:20:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@23faf8f2]">addtoCart</td> 
+  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:19:14</td>   <td>-45847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@7f13d6e]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:19:29</td>   <td>-30635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@51cdd8a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:19:45</td>   <td>-15019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@d44fc21]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:20:22</td>   <td>21746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@23faf8f2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="6ab965">  <td>20/10/07 10:19:43</td>   <td>-16602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@d44fc21]">contactus</td> 
+  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>20/10/07 10:19:13</td>   <td>-47246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@7f13d6e]">login</td> 
+  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:18:55</td>   <td>-64781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@7f13d6e]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:19:16</td>   <td>-43659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@51cdd8a]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:19:32</td>   <td>-27780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@d44fc21]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/10/07 10:19:47</td>   <td>-12497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@23faf8f2]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="997ed7">  <td>20/10/07 10:19:28</td>   <td>-31649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@51cdd8a]">register</td> 
+  <td>main@84739718</td>   <td></td> </tr>
 </table>
