--- a/atmecsautomation/test-output/old/Default suite/methods.html
+++ b/atmecsautomation/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ec7f6c">  <td>20/10/13 18:51:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.atmecsautomation.testscripts.MenuWithSubMenuItems@71bbf57e]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
-<tr bgcolor="6ab965">  <td>20/10/13 18:52:02</td>   <td>31119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MenuWithSubMenuItems.menuWithSubMenu()[pri:5, instance:com.atmecs.atmecsautomation.testscripts.MenuWithSubMenuItems@71bbf57e]">menuWithSubMenu</td> 
-  <td>main@1154002927</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>20/10/13 18:54:40</td>   <td>188500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.atmecsautomation.testscripts.MenuWithSubMenuItems@71bbf57e]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/10/14 11:15:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.atmecsautomation.testscripts.MoreInfoButtonCSSEffect@51cdd8a]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
+<tr bgcolor="c26598">  <td>20/10/14 11:15:42</td>   <td>13206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MoreInfoButtonCSSEffect.cssEffect()[pri:3, instance:com.atmecs.atmecsautomation.testscripts.MoreInfoButtonCSSEffect@51cdd8a]">cssEffect</td> 
+  <td>main@1188753216</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>20/10/14 11:15:43</td>   <td>14845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.atmecsautomation.testscripts.MoreInfoButtonCSSEffect@51cdd8a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
 </table>
